[package]
name = "noblock_input_hook"
version = "0.4.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
retour = "0.4.0-alpha.1"
once_cell = "1.18"

[dependencies.windows]
version = "0.51"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading"
]