[package]
name = "noblock_input_hook"
version = "0.6.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
retour = "0.4.0-alpha.2"
once_cell = "1.19"
winreg = "0.52"

[dependencies.windows-sys]
version = "0.52"
features = ["Win32_UI_Input_KeyboardAndMouse"]

[dependencies.windows]
version = "0.52"
features = [
	"Win32_Foundation",
	"Win32_System_SystemServices",
	"Win32_System",
	"Win32_System_Console",
	"Win32_System_LibraryLoader",
	"Win32_UI_WindowsAndMessaging",
	"Win32_UI_Input_KeyboardAndMouse",
	"Win32_System_Threading"
]

[build-dependencies]
winresource = "0.1.17"