[package]
name = "noblock_input_hook"
version = "0.8.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
log = "0.4"
once_cell = "1.19"
retour = "0.4.0-alpha.2"
simplelog = "0.12"
windows-sys = { version = "0.52", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_Graphics_Gdi"] }
noblock_input_common = { path = "../common" }

[dependencies.windows]
version = "0.56"
features = [
	"Win32_Foundation",
	"Win32_Graphics_Gdi",
	"Win32_System_SystemServices",
	"Win32_System",
	"Win32_System_Console",
	"Win32_System_LibraryLoader",
	"Win32_UI_WindowsAndMessaging",
	"Win32_UI_Input_KeyboardAndMouse",
	"Win32_System_Threading"
]

[build-dependencies]
winresource = "0.1"
