[package]
name = "noblock_input_hook_injector"
version = "0.5.0-pre3"
edition = "2021"

[dependencies]
dll-syringe = "0.15"
ferrisetw = "1.1"
ctrlc = "3.4"
toml = "0.8.8"

[dependencies.serde]
version = "1.0.192"
features = ["derive"]

[dependencies.windows]
version = "0.51"
features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_Diagnostics_Debug", "Win32_System_Diagnostics_Etw"]

[build-dependencies]
embed-manifest = "1.4"