[package]
name = "noblock_input_hook_injector"
version = "0.6.0"
edition = "2021"

[dependencies]
dll-syringe = "0.15"
ferrisetw = "1.1"
ctrlc = "3.4"
toml = "0.8.8"
winreg = "0.52"

[dependencies.serde]
version = "1.0.195"
features = ["derive"]

[dependencies.windows]
version = "0.52"
features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_Diagnostics_Debug", "Win32_System_Diagnostics_Etw"]

[build-dependencies]
embed-manifest = "1.4"
winresource = "0.1.17"