[package]
name = "noblock_input_hook_injector"
version = "0.7.2"
edition = "2021"

[dependencies]
ctrlc = "3.4"
dll-syringe = "0.15"
ferrisetw = "1.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
simplelog = "0.12"
noblock_input_common = { path = "../common" }

[dependencies.windows]
version = "0.53"
features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_Diagnostics_Debug", "Win32_System_Diagnostics_Etw"]

[build-dependencies]
embed-manifest = "1.4"
winresource = "0.1"